tests/testcases/errors/BCE0005-1.boo
"""
BCE0005-1.boo(9,11): BCE0005: Unknown identifier: 'local'.
"""
def foo():
	local = "foo"
	bar()
	
def bar():
	print(local)
